BCD & DI AVT - Low contrast for some text in some page #788 - notificationShow still using old color - progressInfo color still does not have enough contrast, so changed to our usual background blue   (see Carbon issue: https://github.com/IBM/carbon-design-kit/issues/75)

--- a/bundles/org.eclipse.orion.client.ui/web/css/progress.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/progress.css
@@ -9,7 +9,7 @@
 
 .progressInfo {
 	color: white !important;
-	background-color: #5aaafa !important;
+	background-color: #3C71B3 !important;
 }
 
 /* More prominent hyperlinks in notification area */
